test_regress/t/t_interface_generic_bad4.out
%Error: t/t_interface_generic_bad4.v:14:9: Can't find definition of scope/variable: 'b'
   14 |     if (b.k != 9) $stop;
      |         ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-PINNOTFOUND: t/t_interface_generic_bad4.v:20:42: Pin not found: '__pinNumber2'
   20 |   GenericModule genericModule (inf_inst, inf_inst);
      |                                          ^~~~~~~~
                    ... For error description see https://verilator.org/warn/PINNOTFOUND?v=latest
%Error: Exiting due to
